changes in read me file

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,8 @@
     <h1>Choose an Option</h1>
 
     <ul>
-        <li><a href="index.html">Go to index.html</a></li>
-        <li><a href="analysis.html">Go to analysis.html</a></li>
+        <li><a href="index.html">Click for Payment</a></li>
+        <li><a href="analysis.html">Click for analysis</a></li>
     </ul>
 
 </body>
