--- a/templates/home.html
+++ b/templates/home.html
@@ -165,6 +165,7 @@
       <a href="#">About</a>
       <a href="#">Services</a>
       <a href="#">Contact</a>
+      <a href="upload.html">Upload</a>
     </div>
 
     <div class="center-container">
